--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "pipeline": {
+      "format": { "cache": false },
+      "format:check": { "cache": false }
     }
   }
 }
