feat: add Prisma ORM integration
- Configure Prisma client and schema
- Set up database migrations
- Add PostgreSQL connection

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -20,3 +20,6 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=info
+
+# Database (à configurer selon votre choix)
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname?schema=public"
