refactor(api): implement service/repository pattern for users and webhooks
BREAKING CHANGE: auth module removed, now fully delegated to Clerk

- Add users module (UserService, UserRepository, types)
- Restructure webhooks by provider (clerk/, future stripe/)
- Add Svix webhook verification middleware
- Remove obsolete JWT-based auth module
- Clean up environment variables

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,14 +2,8 @@
 PORT=4000
 NODE_ENV=development
 
-# Database (à configurer selon votre choix)
-# DATABASE_URL="postgresql://user:password@localhost:5432/booklin"
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
-JWT_REFRESH_EXPIRES_IN=30d
+# Database
+DATABASE_URL="postgresql://user:password@localhost:5432/booklin?schema=public"
 
 # CORS
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
@@ -21,5 +15,10 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Logging
 LOG_LEVEL=info
 
-# Database (à configurer selon votre choix)
-DATABASE_URL="postgresql://user:password@localhost:5432/dbname?schema=public"
+# Clerk Authentication
+CLERK_PUBLISHABLE_KEY=your-clerk-public-key
+CLERK_SECRET_KEY=your-clerk-secret-key
+CLERK_WEBHOOK_SECRET=your-clerk-webhook-secret
+
+#Insee API Sirene
+INSEE_CLIENT_SECRET=your-insee-client-secret
