--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@clerk/express": "^1.7.37",
     "@prisma/client": "^6.17.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "pino": "^10.0.0",
     "pino-http": "^11.0.0",
+    "svix": "^1.76.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
